--- a/Changes
+++ b/Changes
@@ -1,13 +1,4 @@
-Revision history for {{$dist->name}}
-
-{{$NEXT}}
- [API CHANGES]
-
- [BUG FIXES]
-
- [DOCUMENTATION]
-
- [ENHANCEMENTS]
+Revision history for PMLTQ-Command-printtrees
 
 0.0.1
  - Released: 2018-05-16 14:05:31 UTC
