--- a/Changes
+++ b/Changes
@@ -5,15 +5,17 @@ Revision history for {{$dist->name}}
 
  [BUG FIXES]
 
+Fixing POD.
+
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
 
 speed increase: move looping throw files in layer from printtree command to btred. Btred is loaded once per layer.
 
-Fixing POD.
-
 Added compress option
+
+Add minimum btred version testing
 
 0.0.1
  - Released: 2018-05-16 14:05:31 UTC
